--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,22 @@
 ### Project Settings ###
 # Set min cmake version
-if (WIN32)
+if(WIN32)
     cmake_minimum_required(VERSION 3.21)
-endif (WIN32)
-if (UNIX)
+endif(WIN32)
+if(UNIX)
     cmake_minimum_required(VERSION 3.5)
-endif (UNIX)
+endif(UNIX)
 
 # Set executable target depending on OS...
-if (WIN32)
-    set(PROJ_OUT "nchutils-test-windows")
+if(WIN32)
+    set(PROJ_OUT "nchutils-test-win-x86_64")
     # Show console (FALSE=show, TRUE=don't show)
     set(CMAKE_WIN32_EXECUTABLE FALSE)
-endif (WIN32)
-if (UNIX)
-    set(PROJ_OUT "nchutils-test-unix-amd64")
-endif (UNIX)
+endif(WIN32)
+if(UNIX)
+    EXECUTE_PROCESS( COMMAND uname -m COMMAND tr -d '\n' OUTPUT_VARIABLE ARCHITECTURE )
+    set(PROJ_OUT "nchutils-test-unix-${ARCHITECTURE}")
+endif(UNIX)
 # Project languages and flags
 project(${PROJ_OUT} VERSION 0.1.1.0 LANGUAGES C CXX)
 #set(CMAKE_C_FLAGS "-std=c++11 -O3 -DNDEBUG -s -flto")
