Implement Noah's Allocation Table
-Added: NoahAllocTable
-Added: StringUtils from BTE
-Added: FsUtils search list settings and recursion settings for ls, getDirContents
-Added: TexUtils::fillBorderedRect
-Changed: FilePath doesn't check for validChars anymore
-Fixed: getFileName doesn't work on dirs (replaced with getObjectName())
-Fixed: 'DEBUG' in Log.h
-Fixed: Text::getText unimplemented

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,10 @@
 ### Project Settings ###
 # Set min cmake version
-if(WIN32)
-    cmake_minimum_required(VERSION 3.21)
-endif(WIN32)
-if(UNIX)
-    cmake_minimum_required(VERSION 3.5)
-endif(UNIX)
+cmake_minimum_required(VERSION 3.5)
+if(TRUE)
+    set(CMAKE_C_FLAGS_DEBUG "-g -DDEBUG")
+    set(CMAKE_CXX_FLAGS_DEBUG "-g -DDEBUG")
+endif()
 
 # Set executable target depending on OS...
 if(WIN32)
