--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,30 +1,32 @@
 ### Project Settings ###
 # Set min cmake version
 cmake_minimum_required(VERSION 3.5)
-set(PROJ_NAME "nchutils-test")
-
-# Set Debug flags if debugging...
-if(TRUE)
-    set(CMAKE_C_FLAGS_DEBUG "-g -DDEBUG")
-    set(CMAKE_CXX_FLAGS_DEBUG "-g -DDEBUG")
-endif()
+set(PROJ_NAME "NCH-CPP-Utils")
 
 # Set executable target depending on OS...
-if(WIN32)
-    set(PROJ_OUT "${PROJ_NAME}-win-x86_64")
-    # Show console (FALSE=show, TRUE=don't show)
-    set(CMAKE_WIN32_EXECUTABLE FALSE)
-endif(WIN32)
-if(UNIX)
-    EXECUTE_PROCESS( COMMAND uname -m COMMAND tr -d '\n' OUTPUT_VARIABLE ARCHITECTURE )
-    set(PROJ_OUT "${PROJ_NAME}-unix-${ARCHITECTURE}")
-endif(UNIX)
+if(EMSCRIPTEN)
+    message("[NCH] Building emscripten app as 'emsdk-app'...")
+    set(PROJ_OUT "emsdk-app")
+else()
+    if(WIN32)
+        message("[NCH] Building Windows executable...")
+        set(PROJ_OUT "${PROJ_NAME}-win-x86_64")
+        # Show console (FALSE=show, TRUE=don't show)
+        set(CMAKE_WIN32_EXECUTABLE TRUE)
+    endif()
+    if(UNIX)
+        EXECUTE_PROCESS( COMMAND uname -m COMMAND tr -d '\n' OUTPUT_VARIABLE ARCHITECTURE )
+        message("[NCH] Building unix-${ARCHITECTURE} executable...")
+        set(PROJ_OUT "${PROJ_NAME}-unix-${ARCHITECTURE}")
+    endif()
+endif()
 
 # Project languages and flags
 project(${PROJ_OUT} VERSION 0.1.1.0 LANGUAGES C CXX)
-#set(CMAKE_C_FLAGS "-std=c++11 -O3 -DNDEBUG -s -flto")
-set(CMAKE_C_FLAGS "-std=c++11")
-
+set(CMAKE_CXX_FLAGS "-std=c++11")
+if(EMSCRIPTEN)
+    set(CMAKE_CXX_FLAGS "-std=c++11 -sUSE_SDL=2 -sUSE_SDL_TTF=2 -sUSE_SDL_IMAGE=2 -sUSE_SDL_MIXER=2")
+endif()
 
 ### Create List of Sources, Headers, and Directories ###
 # Get list of sources and headers
@@ -45,8 +47,17 @@ add_executable(${PROJ_OUT} ${PROJ_SOURCES})
 set_target_properties(${PROJ_OUT} PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin"
 )
+# Add assets for emscripten projects
+if(EMSCRIPTEN)
+    set_target_properties(${PROJ_OUT} PROPERTIES LINK_FLAGS "--preload-file ../bin")
+endif()
+
 # Add libraries + link them into target
-target_link_libraries(${PROJ_OUT} PUBLIC "-lSDL2 -lSDL2_image -lSDL2_mixer -lSDL2_ttf -lavutil -lavformat -lavcodec -lswscale -lz -lm -lswresample")
+if(EMSCRIPTEN)
+    target_link_libraries(${PROJ_OUT} PUBLIC "-lSDL2 -lSDL2_image -lSDL2_mixer -lSDL2_ttf")
+else()
+    target_link_libraries(${PROJ_OUT} PUBLIC "-lSDL2 -lSDL2_image -lSDL2_mixer -lSDL2_ttf -lavutil -lavformat -lavcodec -lswscale -lz -lm -lswresample")
+endif()
 get_target_property(TARGET_LIBS ${PROJ_OUT} LINK_LIBRARIES)
 message("[NCH] Linked libraries: ${TARGET_LIBS}")
 # Add include directories (everywhere there is a header file: libraries and PROJ src dirs)
