Update StringUtils and add xml-utils
Added:
-Converter for std::wstring to non-UTF-8 std::string
-xml-utils: XPath and XML

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,7 +57,7 @@ endif()
 if(EMSCRIPTEN)
     target_link_libraries(${PROJ_OUT} PUBLIC "-lSDL2 -lSDL2_image -lSDL2_mixer -lSDL2_ttf")
 else()
-    target_link_libraries(${PROJ_OUT} PUBLIC "-lSDL2 -lSDL2_image -lSDL2_mixer -lSDL2_ttf -lavutil -lavformat -lavcodec -lswscale -lz -lm -lswresample")
+    target_link_libraries(${PROJ_OUT} PUBLIC "-lSDL2 -lSDL2_image -lSDL2_mixer -lSDL2_ttf -lxml2 -lavutil -lavformat -lavcodec -lswscale -lz -lm -lswresample")
 endif()
 get_target_property(TARGET_LIBS ${PROJ_OUT} LINK_LIBRARIES)
 message("[NCH] Linked libraries: ${TARGET_LIBS}")
