Migration to GLSDL, many fixes and additions
Migrate to GLSDL

Added:
-GLSDL compat
-If GLM exists, can cast from glm::vec3 to nch::Vec3
-ChunkMath
-Camera3D: roll
-Mesh: Position, rotation, center of rotation, scale, skybox render flag.
-Shader: set/reset model matrix based on scale, rotation, center of rotation.
Fixed:
-FilePath::getObjectName() returning empty
-FileUtils::readFileContent() crash from null
-Incorrect JSON::loadFromOptionalField error formatting
-Mesh: Addition of identical polys to the same glm::ivec3 key
-Many other changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,11 @@ add_executable(${PROJ_OUT} ${PROJ_SOURCES})
 set_target_properties(${PROJ_OUT} PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin"
 )
+set(NCH_GLSDL_OPENGL_BACKEND 0)
+if(NCH_GLSDL_OPENGL_BACKEND)
+    target_compile_definitions(${PROJ_OUT} PRIVATE NCH_GLSDL_OPENGL_BACKEND=1)
+endif()
+
 # Add assets for emscripten projects
 if(EMSCRIPTEN)
     set_target_properties(${PROJ_OUT} PROPERTIES LINK_FLAGS "--preload-file ../bin")
